// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json-ld > article > basic output 1`] = `
{
  "@type": "Article",
  "articleSection": "Digital Garden",
  "author": {
    "@id": "https://www.alexjorgef.com/#identity",
  },
  "copyrightHolder": {
    "@id": "https://www.alexjorgef.com/#identity",
  },
  "copyrightYear": "2021",
  "creator": {
    "@id": "https://www.alexjorgef.com/#creator",
  },
  "dateModified": "2021-07-17",
  "datePublished": "2021-07-17",
  "description": "Sci-Fi",
  "genre": "Series",
  "headline": "The Expanse",
  "image": {
    "@type": "ImageObject",
    "url": "https://www.alexjorgef.com/path-to-image.png",
  },
  "inLanguage": "en-US",
  "mainEntityOfPage": "https://www.alexjorgef.com/the-expanse",
  "name": "The Expanse",
  "publisher": {
    "@id": "https://www.alexjorgef.com/#creator",
  },
  "url": "https://www.alexjorgef.com/the-expanse",
}
`;

exports[`json-ld > breadcrumbList 1`] = `
{
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
  "description": "Breadcrumbs list",
  "itemListElement": [
    {
      "@type": "ListItem",
      "item": {
        "@id": "https://www.alexjorgef.com",
        "name": "Homepage",
      },
      "position": 1,
    },
    {
      "@type": "ListItem",
      "item": {
        "@id": "https://www.alexjorgef.com/james",
        "name": "James",
      },
      "position": 2,
    },
    {
      "@type": "ListItem",
      "item": {
        "@id": "https://www.alexjorgef.com/naomi",
        "name": "Naomi",
      },
      "position": 3,
    },
  ],
  "name": "Breadcrumbs",
}
`;

exports[`json-ld article basic output 1`] = `
Object {
  "@type": "Article",
  "articleSection": "Digital Garden",
  "author": Object {
    "@id": "https://www.alexjorgef.com/#identity",
  },
  "copyrightHolder": Object {
    "@id": "https://www.alexjorgef.com/#identity",
  },
  "copyrightYear": "2021",
  "creator": Object {
    "@id": "https://www.alexjorgef.com/#creator",
  },
  "dateModified": "2021-07-17",
  "datePublished": "2021-07-17",
  "description": "Sci-Fi",
  "genre": "Series",
  "headline": "The Expanse",
  "image": Object {
    "@type": "ImageObject",
    "url": "https://www.alexjorgef.com/path-to-image.png",
  },
  "inLanguage": "en-US",
  "mainEntityOfPage": "https://www.alexjorgef.com/the-expanse",
  "name": "The Expanse",
  "publisher": Object {
    "@id": "https://www.alexjorgef.com/#creator",
  },
  "url": "https://www.alexjorgef.com/the-expanse",
}
`;

exports[`json-ld breadcrumbList 1`] = `
Object {
  "@context": "https://schema.org",
  "@type": "BreadcrumbList",
  "description": "Breadcrumbs list",
  "itemListElement": Array [
    Object {
      "@type": "ListItem",
      "item": Object {
        "@id": "https://www.alexjorgef.com",
        "name": "Homepage",
      },
      "position": 1,
    },
    Object {
      "@type": "ListItem",
      "item": Object {
        "@id": "https://www.alexjorgef.com/james",
        "name": "James",
      },
      "position": 2,
    },
    Object {
      "@type": "ListItem",
      "item": Object {
        "@id": "https://www.alexjorgef.com/naomi",
        "name": "Naomi",
      },
      "position": 3,
    },
  ],
  "name": "Breadcrumbs",
}
`;
